toggle all good, record selector good

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
         display: list-item;
       }
     </style>
+    <script>let myArray=[]</script>
     <title>React App</title>
     
   </head>
