--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,9 @@
       .list-group-item {
         display: list-item;
       }
+      body{
+        background-color: lightgrey;
+      }
     </style>
     <script>let myArray=[]</script>
     <title>React App</title>
