made modal scrollable

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
     <style>
       body {
         font-family: 'Montserrat';
+        font-weight: bold;
       }
       .loggedOutLinks {
         display: block;
