--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
         display: list-item;
       }
       body {
-        background-color: lightgrey;
+        background-color:white;
       }
     </style>
     <script>
