added background image

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/rollCall.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -65,7 +65,7 @@
     <script>
       let myArray = [];
     </script>
-    <title>React App</title>
+    <title>Roll Call</title>
   </head>
   <body>
     <div id="root"></div>
