--- a/public/index.html
+++ b/public/index.html
@@ -181,7 +181,7 @@
       </div>
     </div> -->
 
-    <div id="modal-login" class="modal fade" tabindex="-1">
+    <!-- <div id="modal-login" class="modal fade" tabindex="-1">
       <div class="modal-dialog">
         <div class="modal-content p-3">
           <form action="/examples/actions/confirmation.php" method="post">
@@ -263,7 +263,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <script>
       function switchModal(num) {
         document.getElementsByClassName("close")[num].click();
