rearranged files and changed firebase app

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Online Attendance App"
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -70,201 +70,6 @@
   </head>
   <body>
     <div id="root"></div>
-
-    <!-- <div id="modal-signup" class="modal fade" tabindex="-1">
-      <div class="modal-dialog">
-        <div class="modal-content p-3">
-          <form id="signupForm" >
-            <button
-              id="closeme"
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-            <h2>Sign Up</h2>
-
-            <p>Please fill in this form to create an account!</p>
-            <hr />
-
-            <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span
-                    class="input-group-text"
-                    style="
-                      width: 40px;
-                      text-align: center;
-                      display: inline-block;
-                    "
-                  >
-                    <i class="fa fa-user"></i>
-                  </span>
-                </div>
-                <input
-                id="signup-email"
-                  type="email"
-                  class="form-control"
-                  name="email"
-                  placeholder="Email Address"
-                  required="required"
-                />
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span
-                    class="input-group-text"
-                    style="
-                      width: 40px;
-                      text-align: center;
-                      display: inline-block;
-                    "
-                  >
-                    <i class="fa fa-lock px-auto"></i>
-                  </span>
-                </div>
-                <input
-                id="signup-password"
-                  type="text"
-                  class="form-control"
-                  name="password"
-                  placeholder="Password"
-                  required="required"
-                />
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span
-                    class="input-group-text"
-                    style="
-                      width: 40px;
-                      text-align: center;
-                      display: inline-block;
-                    "
-                  >
-                    <i class="fa fa-check"></i>
-                  </span>
-                </div>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="confirm_password"
-                  placeholder="Confirm Password"
-                  required="required"
-                />
-              </div>
-            </div>
-
-            <div class="form-group text-center">
-              <button type="submit" class="btn btn-primary btn-lg mx-auto">
-                Sign Up
-              </button>
-            </div>
-          </form>
-          <div class="text-center">
-            Already have an account?
-            <a
-              role="button"
-              href="#"
-              data-toggle="modal"
-              data-target="#modal-login"
-              onclick="switchModal(0)"
-              >Login here</a
-            >
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-    <!-- <div id="modal-login" class="modal fade" tabindex="-1">
-      <div class="modal-dialog">
-        <div class="modal-content p-3">
-          <form action="/examples/actions/confirmation.php" method="post">
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-            <h2>Login</h2>
-            <p>Please fill in this form to login!</p>
-            <hr />
-
-            <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span
-                    class="input-group-text"
-                    style="
-                      width: 40px;
-                      text-align: center;
-                      display: inline-block;
-                    "
-                  >
-                    <i class="fa fa-user"></i>
-                  </span>
-                </div>
-                <input
-                  type="email"
-                  class="form-control"
-                  name="email"
-                  placeholder="Email Address"
-                  required="required"
-                />
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span
-                    class="input-group-text"
-                    style="
-                      width: 40px;
-                      text-align: center;
-                      display: inline-block;
-                    "
-                  >
-                    <i class="fa fa-lock px-auto"></i>
-                  </span>
-                </div>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="password"
-                  placeholder="Password"
-                  required="required"
-                />
-              </div>
-            </div>
-
-            <div class="form-group text-center">
-              <button type="submit" class="btn btn-primary btn-lg mx-auto">
-                Login
-              </button>
-            </div>
-          </form>
-          <div class="text-center">
-            Don't have an account?
-            <a
-              role="button"
-              href="#"
-              data-toggle="modal"
-              data-target="#modal-signup"
-              onclick="switchModal(1)"
-              >Signup here</a
-            >
-          </div>
-        </div>
-      </div>
-    </div> -->
     <script>
       function switchModal(num) {
         document.getElementsByClassName("close")[num].click();
